@@ -2,7 +2,6 @@ package it.unibo.monopoly.model.gameboard.impl;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import it.unibo.monopoly.model.gameboard.api.Board;
@@ -39,6 +38,7 @@ public class BoardImpl implements Board {
     /**
      * sort the tiles.
     */
+    @Override
     public void sortTiles() {
         this.tiles.sort((a, b) -> ((TileImpl) a).compareTo((TileImpl) b));
     }
@@ -52,6 +52,7 @@ public class BoardImpl implements Board {
      * remove a pawn.
      * @param p
     */
+    @Override
     public void removePawn(final Pawn p) {
         this.pawns.remove(p);
     }
@@ -60,6 +61,7 @@ public class BoardImpl implements Board {
      * add a pawn.
      * @param p
     */
+    @Override
     public void addPawn(final Pawn p) {
         this.pawns.add(p);
     }
@@ -79,10 +81,11 @@ public class BoardImpl implements Board {
      * @param tile
      * @return List of Pawn
     */
+    @Override
     public List<Pawn> getPawninTile(final Tile tile) {
         final List<Pawn> pawnsInTile = new ArrayList<>();
 
-        for (final Pawn p : pawnsInTile) {
+        for (final Pawn p : this.pawns) {
             if (((PositionImpl) p.getPosition()).equals((PositionImpl) tile.getPosition())) {
                 pawnsInTile.add(p);
             }
@@ -123,7 +126,8 @@ public class BoardImpl implements Board {
      * @return List of Tiles
     */
     @Override
-    public List<Tile> getTiles() {
-        return Collections.unmodifiableList(this.tiles);
+    public final List<Tile> getTiles() {
+        return List.copyOf(this.tiles);
     }
+
 }
